404 Error html upload

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                     <li>Pynn leverages Android Studio's scalable IntelliJ Java platform to deliver multimedia content to adventure-driven
                         users seeking what our beautiful world has to offer</li>
                     <li>
-                        <a href="#">Learn more about how Pynn will change the way we share experiences</a>
+                        <a href="404_go_error.html">Learn more about how Pynn will change the way we share experiences</a>
                     </li>
                 </ul>
                 <!--rubikGO-->
@@ -294,15 +294,15 @@
                     <li>Gangl manages and structures student's worloads into a simple user-centered platform</li>
                     <li>
                         <a href="https://www.youtube.com/watch?v=QaixSsK434s" target="_blank">Watch the Gangl Team's design process</a> or
-                        <a href="#">click here</a> to learn more about Gangl</li>
+                        <a href="404_go_error.html">click here</a> to learn more about Gangl</li>
                 </ul>
                 <!--ROCKETRY DESIGN TEAM-->
                 <b>Waterloo Rocketry Design Team</b>
                 <ul>
                     <li>Active member of sub-team focusing on rocket payload design and payload recovery</li>
                     <li>Iteratively designed deadweight
-                        <a href="#" target="blank">cubesat</a> and parachute pin using
-                        <a href="#" target="_blank">SolidWorks CAD</a> for mission critical testing</li>
+                        <a href="404_go_error.html" target="blank">cubesat</a> and parachute pin using
+                        <a href="404_go_error.html" target="_blank">SolidWorks CAD</a> for mission critical testing</li>
                     <li>
                         <a href="http://waterloorocketry.com/" target="_blank">Explore Waterloo Rocketry</a>
                     </li>
@@ -402,8 +402,8 @@
             <div class="col-sm-8">
                 <p class="lead">
                     Pynn is an experience based, multimedia platform that will change the way we use social media. Pynn, in it's first iteration
-                    <a href="#">Synthesis Phase</a> of the
-                    <a href="#">Inerative Design Process</a>
+                    <a href="404_go_error.html">Synthesis Phase</a> of the
+                    <a href="404_go_error.html">Inerative Design Process</a>
                     (IDP), takes a different approach towards the way we share content by moving the focus from a user's profile to the experiences
                     users share. Users share multimedia
                     <b>experiences</b> consisting of video, photos and text with their connections. Pynn compiles this media
@@ -411,8 +411,8 @@
                 </p>
                 <p class="lead">
                     Pynn is currently being written in Android Studio, leveraging the scalable flexibility of the IntelliJ Java framwork.
-                    <a href="#">View Wireframes</a> /
-                    <a href="#">View IDP documentation</a>.
+                    <a href="404_go_error.html">View Wireframes</a> /
+                    <a href="404_go_error.html">View IDP documentation</a>.
                 </p>
             </div>
         </div>
@@ -475,7 +475,7 @@
                 </p>
                 <p class="lead">
                     <a href="https://www.youtube.com/watch?v=QaixSsK434s" target="_blank">View Design Process Video</a> /
-                    <a href="#">View IDP documentation</a>
+                    <a href="404_go_error.html">View IDP documentation</a>
                 </p>
             </div>
         </div>
