--- a/404_go_error.html
+++ b/404_go_error.html
@@ -37,17 +37,18 @@
 <!--BEGINNING OF THE BODY OF THE HTML DOCUMENT-->
 
 <body style="background-color:#2e1114;">
+    <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                    <img id="landing_page_img" src="15Artboard 1.png" class="center" width="100%" height="auto" alt="Landing Page Art">>
+                <img id="landing_page_img" src="15Artboard 1.png" class="center" width="100%" height="auto" alt="Landing Page Art">>
             </div>
         </div>
-
+    </div>
     <footer class="footer">
         <div class="container">
-            <p class="text-right lead">Website created by Sammy Robens-Paradise</p>
-            <p class="text-right lead">Email: srobensp@edu.uwaterloo.ca</p>
-            <p class="text-right lead">Phone: 778-887-9189</p>
+            <p class="text-right lead" style="color:#ffff">Website created by Sammy Robens-Paradise</p>
+            <p class="text-right lead" style="color:#ffff">Email: srobensp@edu.uwaterloo.ca</p>
+            <p class="text-right lead" style="color:#ffff">Phone: 778-887-9189</p>
         </div>
         <div class="container">
             <div class="row">
@@ -67,5 +68,6 @@
             <br>
     </footer>
     <!--THIS IS THE END OF THE SECTION OF A WEBPAGE, NOTE THAT THE FOOTER IS STICKY-->
- </body>
+</body>
+
 </html>
