Updated Index.CSS for new look and feel as well as added some temporary (unedited) content to the whos sammy section as well as changed landing page art and button styles

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Sammy Robens-Paradise</title>
+    <title> DEV/QA Sammy Robens-Paradise</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Internal main Stylesheet-->
-    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
+    <!-- Intern al main Stylesheet-->
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="bootstrap-social.css" />
 
@@ -32,15 +32,15 @@
         crossorigin="anonymous"></script>
 
     <!-- Internal JavaScript main.js file-->
-    <script src="index.js"></script>
+    <script src="main.js"></script>
 </head>
 <!--BEGINNING OF THE BODY OF THE HTML DOCUMENT-->
 
-<body style="background-color:#2e1114;">
+<body style="background-color:#000000;">
     <!--THIS IS THE TOP STICKY NAVIGATION BAR-->
     <nav class="navbar navbar-expand-md fixed-top navbar-default">
-        <a class="navbar-brand active" href="index.html">
-            Sammy Robens-Paradise
+        <a class="navbar-brand active" href="main_page.html">
+            Main
             <!--img src="13Artboard 1.png" width="10%" height="7%" class="d-inline-block align-top" alt=""-->
         </a>
 
@@ -110,28 +110,29 @@
     <br>
     <div class="container">
         <div class="row">
-            <div class="col-sm-4 center-block">
+            <div id="landing_page_name" class="col-sm-4 center-block">
                 <h1 class="display-3" align="center">Sammy Robens-Paradise</h1>
                 <br>
                 <h2 class="lead" align="center">Systems Design Engineering</h2>
                 <h2 class="lead" align="center">The University of Waterloo</h2>
                 <br>
                 <div class="text-center">
-                    <button id="goExploring" type="button" class="btn btn-danger btn-lg toggle-text">
+                    <button id="goExploring" type="button" class="btn btn-dark btn-lg toggle-text">
                         Go Exploring . . .
                     </button>
                 </div>
                 <br>
                 <div class="text-center">
-                    <button id="resume" type="button" class="btn btn-danger btn-lg toggle-text">
+                    <button id="resume" type="button" class="btn btn-dark btn-lg toggle-text">
                         Resume . . .
                     </button>
                 </div>
+                <br>
             </div>
-            <div class="col-sm-8">
+            <div id="landing_page_pic" class="col-sm-8">
                 <br>
                 <br>
-                <img id="landing_page_img" src="landing_page_art_3.png" class="center" width="100%" height="auto" alt="Landing Page Art">
+                <img id="landing_page_img" src="landing_page_art_4.png" class="center" width="150%" height="auto" alt="Landing Page Art">
             </div>
         </div>
     </div>
@@ -149,42 +150,37 @@
                         <button id="projects_btn" type="button" class="btn btn-outline-light btn-lg center toggle-text">
                             Projects
                         </button>
-                        <br>
-                        <br>
                     </div>
                 </div>
+                <br>
                 <div class="col-sm-3">
                     <div class="text-center">
                         <!--EXPERIENCE BUTTON-->
                         <button id="experience_btn" type="button" class="btn btn-outline-light btn-lg center toggle-text">
                             Experience
                         </button>
-                        <br>
-                        <br>
                     </div>
                 </div>
+                <br>
                 <div class="col-sm-3">
                     <div class="text-center">
                         <!--EDUCATION BUTTON-->
                         <button id="education_btn" type="button" class="btn btn-outline-light btn-lg center toggle-text">
                             Education
                         </button>
-                        <br>
-                        <br>
                     </div>
                 </div>
+                <br>
                 <div class="col-sm-3">
                     <div class="text-center">
                         <!--WHOS SAMMY (PROFILE BUTTON)-->
                         <button id="whos_sammy_btn" type="button" class="btn btn-outline-light btn-lg center toggle-text">
                             Who's Sammy?
                         </button>
-                        <br>
-                        <br>
                     </div>
                 </div>
+                <br>
             </div>
-
         </div>
     </div>
     <br>
@@ -277,7 +273,7 @@
                     <li>Pynn leverages Android Studio's scalable IntelliJ Java platform to deliver multimedia content to adventure-driven
                         users seeking what our beautiful world has to offer</li>
                     <li>
-                        <a href="404_go_error.html">Learn more about how Pynn will change the way we share experiences</a>
+                        <a href="#">Learn more about how Pynn will change the way we share experiences</a>
                     </li>
                 </ul>
                 <!--rubikGO-->
@@ -294,15 +290,15 @@
                     <li>Gangl manages and structures student's worloads into a simple user-centered platform</li>
                     <li>
                         <a href="https://www.youtube.com/watch?v=QaixSsK434s" target="_blank">Watch the Gangl Team's design process</a> or
-                        <a href="404_go_error.html">click here</a> to learn more about Gangl</li>
+                        <a href="#">click here</a> to learn more about Gangl</li>
                 </ul>
                 <!--ROCKETRY DESIGN TEAM-->
                 <b>Waterloo Rocketry Design Team</b>
                 <ul>
                     <li>Active member of sub-team focusing on rocket payload design and payload recovery</li>
                     <li>Iteratively designed deadweight
-                        <a href="404_go_error.html" target="blank">cubesat</a> and parachute pin using
-                        <a href="404_go_error.html" target="_blank">SolidWorks CAD</a> for mission critical testing</li>
+                        <a href="#" target="blank">cubesat</a> and parachute pin using
+                        <a href="#" target="_blank">SolidWorks CAD</a> for mission critical testing</li>
                     <li>
                         <a href="http://waterloorocketry.com/" target="_blank">Explore Waterloo Rocketry</a>
                     </li>
@@ -371,7 +367,6 @@
     <!--THIS SECTION IS THE SCROLL TO SECTION ELEMENT-->
     <div id='scrollToElement' class="container">
         <br>
-        <br>
     </div>
     <!--THIS IS THE END OF THE SCROLL TO SECTION ELEMENT-->
 
@@ -402,8 +397,8 @@
             <div class="col-sm-8">
                 <p class="lead">
                     Pynn is an experience based, multimedia platform that will change the way we use social media. Pynn, in it's first iteration
-                    <a href="404_go_error.html">Synthesis Phase</a> of the
-                    <a href="404_go_error.html">Inerative Design Process</a>
+                    <a href="#">Synthesis Phase</a> of the
+                    <a href="#">Inerative Design Process</a>
                     (IDP), takes a different approach towards the way we share content by moving the focus from a user's profile to the experiences
                     users share. Users share multimedia
                     <b>experiences</b> consisting of video, photos and text with their connections. Pynn compiles this media
@@ -411,8 +406,8 @@
                 </p>
                 <p class="lead">
                     Pynn is currently being written in Android Studio, leveraging the scalable flexibility of the IntelliJ Java framwork.
-                    <a href="404_go_error.html">View Wireframes</a> /
-                    <a href="404_go_error.html">View IDP documentation</a>.
+                    <a href="#">View Wireframes</a> /
+                    <a href="#">View IDP documentation</a>.
                 </p>
             </div>
         </div>
@@ -475,7 +470,7 @@
                 </p>
                 <p class="lead">
                     <a href="https://www.youtube.com/watch?v=QaixSsK434s" target="_blank">View Design Process Video</a> /
-                    <a href="404_go_error.html">View IDP documentation</a>
+                    <a href="#">View IDP documentation</a>
                 </p>
             </div>
         </div>
@@ -736,11 +731,42 @@
             </div>
             <div class="col-sm-8">
                 <p class="lead">
-                    some sample text
+                    As someone who advocates optimized engineering solutions, I continue on my journey to find the most eloquent and beautiful
+                    solutions to the worlds most challening problems. I have always taken an interest in the way humans interact
+                    with technology, and more specifically, the way it shapes our
+                    <b>experiences</b>. I chose to study Systems Design Engineering becuase of my inate facination with the
+                    way one users experience of a product or service can shape their understanding of the world, and more
+                    specifically, the uniqueness of each person's experience.
+                </p>
+                <p class="lead">
+                    Through my exposure to software, and my personal persuit of web development I found a keen interest in the connection between
+                    a user's experience and the interface that is presented to that user.
                 </p>
             </div>
         </div>
         <br>
+        <div class="row">
+            <div class="col-sm-4 text-left">
+                <p class="lead">A little more...</p>
+            </div>
+            <div class="col-sm-8 experience-right-header text-right">
+                <h4>II. Definition</h4>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-sm-8">
+                <p class="lead">
+                    How would you define Sammy? My interests vary from guitar to snowboarding (a sport that has landed me with many injury-related
+                    setbacks). I believe that a persons experience shape who they are, and this is all the more relevant
+                    as it relates to experience. As an active individual, I emphasize the importance of physcial Activity
+                    as well as Music in my designs.
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <img src="playing_guitar.png" class="img_" width="100%" height="auto" alt="Playing Guitar">
+            </div>
+        </div>
     </div>
     <!--CLOSE ABOUT BUTTON-->
     <div id="close_about_bottom" class="collapse container">
