updated hrefs for index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Intern al main Stylesheet-->
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="bootstrap-social.css" />
 
@@ -32,7 +32,7 @@
         crossorigin="anonymous"></script>
 
     <!-- Internal JavaScript main.js file-->
-    <script src="main.js"></script>
+    <script src="index.js"></script>
 </head>
 <!--BEGINNING OF THE BODY OF THE HTML DOCUMENT-->
 
