--- a/404_go_error.html
+++ b/404_go_error.html
@@ -36,7 +36,7 @@
 </head>
 <!--BEGINNING OF THE BODY OF THE HTML DOCUMENT-->
 
-<body style="background-color:#2e1114;">
+<body style="background-color:#000000;">
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
