inserted template loading page

--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
 <!--BEGINNING OF THE BODY OF THE HTML DOCUMENT-->
 
 <body style="background-color:#000000;">
+    <!--THIS SECTION IS THE LOADING PAGE-->
+    <div class="loader">
+        <div class="image">
+            <i class="fa fa-codepen"></i>
+        </div>
+        <span></span>
+    </div>
+
+    <!--THIS IS THE END OF THE LOADING PAGE-->
+
     <!--THIS IS THE TOP STICKY NAVIGATION BAR-->
     <nav class="navbar navbar-expand-md fixed-top navbar-default">
         <a class="navbar-brand active" href="index.html">
