updated loading screen

--- a/index.html
+++ b/index.html
@@ -38,13 +38,9 @@
 
 <body style="background-color:#000000;">
     <!--THIS SECTION IS THE LOADING PAGE-->
-    <div class="loader">
-        <div class="image">
-            <i class="fa fa-codepen"></i>
-        </div>
-        <span></span>
+    <div class="loading">
+        <i style="color:#ffff" class="fas fa-bicycle"></i>
     </div>
-
     <!--THIS IS THE END OF THE LOADING PAGE-->
 
     <!--THIS IS THE TOP STICKY NAVIGATION BAR-->
