--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
 
 <body style="background-color:#000000;">
     <!--THIS SECTION IS THE LOADING PAGE-->
-    <div class="loading">
-        <i style="color:#ffff" class="fas fa-bicycle"></i>
-    </div>
+    <div class="loader"></div>
     <!--THIS IS THE END OF THE LOADING PAGE-->
 
     <!--THIS IS THE TOP STICKY NAVIGATION BAR-->
