--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <!--BEGINNING OF THE BODY OF THE HTML DOCUMENT-->
 
 <body style="background-color:#000000;">
+    <div class='loader'></div>
     <!--THIS IS THE TOP STICKY NAVIGATION BAR-->
     <nav class="navbar navbar-expand-md fixed-top navbar-default">
         <a class="navbar-brand active" href="index.html">
