--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
         crossorigin="anonymous"></script>
     <!-- Internal JavaScript main.js file-->
     <script src="index.js"></script>
+
+    <script type="text/javascript">
+        $(window).load(function() {
+            $(".loader").fadeOut("slow");
+        })
+        </script>
 </head>
 <!--BEGINNING OF THE BODY OF THE HTML DOCUMENT-->
 
