bug fix attempt with loading screen

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <script type="text/javascript">
         $(window).load(function() {
-            $(".loader").fadeOut("slow");
+            $(".loader").hide();
         })
         </script>
 </head>
