--- a/index.html
+++ b/index.html
@@ -32,17 +32,13 @@
         crossorigin="anonymous"></script>
     <!-- Internal JavaScript main.js file-->
     <script src="index.js"></script>
-
-    <script type="text/javascript">
-        $(window).load(function() {
-            $(".loader").hide();
-        })
-        </script>
 </head>
 <!--BEGINNING OF THE BODY OF THE HTML DOCUMENT-->
 
-<body style="background-color:#000000;">
-    <div class="loader"></div>
+<body onload="splash(3000)" style="background-color:#000000;">
+    <!--SPLASH SCREEN-->
+    <div id="splashscreen"class="loader"></div>
+    
     <!--THIS IS THE TOP STICKY NAVIGATION BAR-->
     <nav class="navbar navbar-expand-md fixed-top navbar-default">
         <a class="navbar-brand active" href="index.html">
