--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
 </head>
 <!--BEGINNING OF THE BODY OF THE HTML DOCUMENT-->
 
-<body onload="splash(3000)" style="background-color:#000000;">
+<body onload="splash(2500)" style="background-color:#000000;">
     <!--SPLASH SCREEN-->
-    <div id="splashscreen"class="loader"></div>
-    
+    <div id="splashscreen"class="loader">
+        <div class="loaderIcon"></div>
+    </div>
+
     <!--THIS IS THE TOP STICKY NAVIGATION BAR-->
     <nav class="navbar navbar-expand-md fixed-top navbar-default">
         <a class="navbar-brand active" href="index.html">
