--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@
     <div id="splashscreen"class="loader">
         <br>
         <br>
+        <br>
         <div class="loaderIcon"></div>
+        <div>
+            <p class="lead text-center">
+                Getting thing Organized<span class="dots">...</span>
+            </p>
+        </div>
     </div>
 
     <!--THIS IS THE TOP STICKY NAVIGATION BAR-->
