changed loading screen

--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
         <br>
         <br>
         <div class="loaderIcon"></div>
+        <br>
+        <br>
         <div>
-            <p class="lead text-center">
-                Getting thing Organized<span class="dots">...</span>
+            <p class="lead text-center" style="color: #000000;">
+                Getting things Organized<span class="dots">...</span>
             </p>
         </div>
     </div>
