text change to index.html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <br>
         <div>
             <p class="lead text-center" style="color: #000000;">
-                Getting things Organized<span class="dots">...</span>
+                Getting things organized<span class="dots">...</span>
             </p>
         </div>
     </div>
