bug fixes for navbar

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
 
     <!--THIS IS THE TOP STICKY NAVIGATION BAR-->
-    <nav class="navbar navbar-expand-md fixed-top navbar-default">
+    <nav class="navbar navbar-expand-md navbar-default">
         <a class="navbar-brand active" href="index.html">
             Main
         </a>
