changes to loading screen

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <body onload="splash(2500)" style="background-color:#000000;">
     <!--SPLASH SCREEN-->
-    <div id="splashscreen"class="loader">
+    <div id="splashscreen" class="loader">
         <br>
         <br>
         <br>
@@ -46,8 +46,15 @@
         <br>
         <div>
             <p class="lead text-center" style="color: #000000;">
-                Getting things organized<span class="dots">...</span>
+                Getting organized
+                <span class="dots">...</span>
             </p>
+            <blockquote class="blockquote text-center">
+                <p class="mb-0 lead text-center" style="color: #000000;">Look at usual things with unusual eyes.</p>
+                <footer class="blockquote-footer">Vico Magistretti
+                    <cite title="Source Title">Industrial Designer</cite>
+                </footer>
+            </blockquote>
         </div>
     </div>
 
