added quotes to content

--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
                 Getting organized
                 <span class="dots">...</span>
             </p>
+            <br>
+            <br>
             <blockquote class="blockquote text-center">
-                <p class="mb-0 lead text-center" style="color: #000000;">Look at usual things with unusual eyes.</p>
+                <p class="mb-0 lead text-center" style="color: #000000;">"Look at usual things with unusual eyes."</p>
                 <footer class="blockquote-footer">Vico Magistretti
                     <cite title="Source Title">Industrial Designer</cite>
                 </footer>
