updated to fix navbar bug on mobile screen size

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
             Main
         </a>
 
-        <button id="navbarToggler" class="navbar-toggler nav" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+        <button id="navbarToggler" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="fa fa-bars"></span>
         </button>
-        <div class="collapse navbar-collapse nav" id="navbarNav">
+        <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link" id="navbar_projects">Projects</a>
