--- a/404_go_error.html
+++ b/404_go_error.html
@@ -40,7 +40,16 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <img id="landing_page_img" src="15Artboard 1.png" class="center" width="100%" height="auto" alt="Landing Page Art">>
+                <img id="landing_page_img" src="16Artboard 1.png" class="center" width="100%" height="auto" alt="Landing Page Art">>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                    <button id="takemehome" type="button" class="btn btn-dark btn-block btn-lg toggle-text" href="index.html">
+                            Take me home...
+                        </button>
             </div>
         </div>
     </div>
