--- a/404_go_error.html
+++ b/404_go_error.html
@@ -47,9 +47,9 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                    <button id="takemehome" type="button" class="btn btn-dark btn-block btn-lg toggle-text" href="index.html">
+                    <a id="takemehome" type="button" class="btn btn-dark btn-block btn-lg toggle-text" href="index.html">
                             Take me home...
-                        </button>
+                    </a>
             </div>
         </div>
     </div>
