--- a/404_go_error.html
+++ b/404_go_error.html
@@ -47,7 +47,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                    <a id="takemehome" type="button" class="btn btn-dark btn-block btn-lg toggle-text" href="SammyRobensParadise.github.io">
+                    <a id="takemehome" type="button" class="btn btn-dark btn-block btn-lg toggle-text" href="https://sammyrobensparadise.github.io/SammyRobensParadise.github.io/index.html">
                             Take me home...
                     </a>
             </div>
