--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
         <br>
         <br>
         <div>
-            <p class="lead text-center" style="color: #000000;">
+            <p class="lead text-center" style="color: #000000 !important;">
                 Getting organized
                 <span class="dots">...</span>
             </p>
             <br>
             <br>
             <blockquote class="blockquote text-center">
-                <p class="mb-0 lead text-center" style="color: #000000;">"Look at usual things with unusual eyes."</p>
+                <p class="mb-0 lead text-center" style="color: #000000 !important;">"Look at usual things with unusual eyes."</p>
                 <footer class="blockquote-footer">Vico Magistretti
                     <cite title="Source Title">Industrial Designer</cite>
                 </footer>
